tests/ui/traits/next-solver/diagnostics/where-clause-doesnt-apply.stderr
error[E0277]: the trait bound `(): Foo` is not satisfied
  --> $DIR/where-clause-doesnt-apply.rs:18:15
   |
LL |     needs_foo(());
   |     --------- ^^ the trait `Bar` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/where-clause-doesnt-apply.rs:2:1
   |
LL | trait Bar {}
   | ^^^^^^^^^
note: required for `()` to implement `Foo`
  --> $DIR/where-clause-doesnt-apply.rs:4:9
   |
LL | impl<T> Foo for T where T: Bar {}
   |         ^^^     ^          --- unsatisfied trait bound introduced here
note: required by a bound in `needs_foo`
  --> $DIR/where-clause-doesnt-apply.rs:5:22
   |
LL | fn needs_foo(_: impl Foo) {}
   |                      ^^^ required by this bound in `needs_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
